# legacy-sipxecs

./: .gitignore  .gitmodules  Design  Issues  Makefile.in  README  build  configure.ac  dependencies.mak  repotest  top.mak.in
doc/: ClusterManagement.html  ClusterManagement.xml  EclipseCDTprojects.txt  Hotelling.xml  Makefile.am  coding-standard.html  configure.ac  docbook-jadetex.dsssl  process_state.dot  sipxecs-doc.spec.in  style.xsl
lib/: Makefile  Makefile.in  README  configure.ac  dependencies.mak
lib/asciidoc/: Makefile.am  README  configure.ac
lib/cgicc/: Makefile.am  cgicc.spec  configure.ac
lib/cppunit/: Makefile.am  configure.ac  cppunit-sipx.patch
lib/dnsjava/: 0001-Remove-building-SUN-JVM-DNS-provider.patch  Makefile.am  configure.ac  dnsjava.spec
lib/erlang_with_no_gui/: Makefile.am  configure.ac
lib/freeswitch/: Makefile.am  configure.ac  freeswitch.spec  freeswitch.spec.in  mod_event_socket.patch  sipx-freeswitch.spec  upgradenotes.txt
lib/http-access/: Makefile.am  configure.ac  http-access.spec.in
lib/jain-sip/: Makefile.am  README  build-fix.patch  configure.ac  jain-sip.spec
lib/jakarta-commons-net/: Makefile.am  configure.ac
lib/java-ibm/: Makefile.am  README  configure.ac  java-ibm-unrestricted.spec
lib/java-sun/: Makefile.am  README  configure.ac
lib/kraken/: Makefile.am  configure.ac  kraken.spec
lib/libpcap/: Makefile.am  configure.ac
lib/nsis/: Makefile.am  configure.ac
lib/openssl/: Makefile.am  configure.ac
lib/pcre/: Makefile.am  configure.ac  pcre-3.9-libtool.patch  pcre.spec
lib/rrdtool/: Makefile.am  README  configure.ac  rrdtool.spec
lib/rsyslog/: Makefile.am  configure.ac
lib/ruby/: Makefile.am  configure.ac  ruby-abi.spec
lib/ruby-dbi/: Makefile.am  configure.ac
lib/ruby-gems/: Makefile.am  configure.ac
lib/ruby-postgres/: Makefile.am  configure.ac  ruby-postgres.spec  ruby-postgres.spec.in
lib/rubygem-file-tail/: Makefile.am  configure.ac
lib/rubygem-rake/: Makefile.am  configure.ac
lib/rubygems/: Makefile.am  configure.ac  rubygems.spec
lib/sipx-jasperreports-deps/: Makefile.am  configure.ac  sipx-jasperreports-deps.spec
lib/sipx-openfire/: Makefile.am  configure.ac  sipx-openfire.spec
lib/soap4r/: Makefile.am  configure.ac  soap4r.spec.in
lib/stunnel/: Makefile.am  configure.ac
lib/tcpdump/: Makefile.am  configure.ac
lib/w3c-libwww/: Makefile.am  configure.ac  sipx-w3c-libwww.spec
lib/xerces-c/: Makefile.am  README  configure.ac  xerces-c-sipx.patch
sipXacccode/: .classpath  .project  Makefile.am  common.am  config.properties.in  configure.ac  sipxacccode.spec.in
sipXacccode/etc/: Makefile.am  log4j.properties.in  sipxacccode-process.xml.in  sipxacccode.cf
sipXacccode/lib/: .gitignore
sipXacccode/meta/: Makefile.am  authcodes.xsd.in
sipXacccode/src/: Makefile.am  ant-targets.xml  build.xml  common.am
sipXacccode/test/: Makefile.am
sipXacd/: .cproject  .project  Makefile.am  configure.ac  sipxacd.spec.in
sipXacd/doc/: ACD_Agent_State_Server_Actions.doc  Doxyfile.project.in  Makefile.am  sipXACD_Managed_Objects.doc
sipXacd/etc/: Makefile.am  sipxacd-config.in  sipxacd-process.xml.in  sipxacd.process.xml.in
sipXacd/src/: ACDAgent.cpp  ACDAgent.h  (+44 more)
sipXacdStatistics/: Makefile.am  README  common.am  configure.ac  sipxacdstatistics.spec.in
sipXaudiocodes/: .classpath  .project  Makefile.am  common.am  configure.ac  sipxaudiocodes.spec.in
sipXbridge/: .classpath  .project  ACKNOWLEGEMENT  Acknowledgement  CONTRIBUTORS  Makefile.am  README  ant-build.properties  ant-targets.am  ant-targets.xml  build.xml  common.am  config  config.properties.in  config.properties.test  configure.ac  run.sh  runtest.sh  selftest.properties  sipxbridge-process.xml.in  sipxbridge-profile-opts.sh  sipxbridge.process.xml.in  sipxbridge.sh.in  sipxbridge.spec.in  sipxbridge.xml.example  sipxrelay-process.xml.in  sipxrelay.process.xml.in  sipxrelay.sh.in  unittest.properties
sipXcallController/: .classpath  .project  Makefile.am  README  ant-targets.am  ant-targets.xml  build.xml  common.am  config.properties.in  configure.ac  curlcommand.sh  curlcommand1.sh  plugin.xml  sipxcallcontroller-process.xml.in  sipxcallcontroller.sh.in  sipxcallcontroller.spec.in  sipxcallcontroller.xml.example
sipXcallLib/: .cproject  .project  CONTRIBUTORS  ChangeLog  INSTALL  Makefile.am  TODO  configure.ac  resource.h  sipXcallLib-VoiceEngine.vcproj  sipXcallLib.vcproj  sipXcallLibTest.sln  sipXcallLibTest.vcproj  sipXtapi-VoiceEngine.sln  sipXtapi-VoiceEngine.vcproj  sipXtapi.def  sipXtapi.rc  sipXtapi.sln  sipXtapi.vcproj  sipXtapiTest.vcproj  sipxcalllib.spec.in
sipXcdr/: Makefile.am  common.am  configure.ac  sipxcallresolver.gemspec.in  sipxcdr.spec.in
sipXcdrLog/: .classpath  .project  Makefile.am  README  ant-targets.am  ant-targets.xml  build.xml  common.am  config.properties.in  configure.ac  sipxcdrlog.spec.in
sipXclearone/: .classpath  .project  build.xml  configure.ac  sipxclearone.spec.in
sipXcommons/: .classpath  .project  Makefile.am  config.properties.in  configure.ac  sipxcommons-rpmlintrc  sipxcommons.spec.in
sipXcommserverLib/: .cproject  .project  ChangeLog  INSTALL  Makefile  Makefile.am  README  config.status  configure.ac  libtool  sipXcommserverLib.dsp  sipdbtest.dsp  sipxcommserverlib-rpmlintrc  sipxcommserverlib.spec.in
sipXconfig/: ChangeLog  INSTALL  LICENSE  Makefile.am  NOTICE  README  TODO  ant-targets.am  ant-targets.xml  build.properties.in  build.xml  common.am  configure.ac  dependencies.xml  lib.properties  pom.xml  profilepub_sipagent.dsp  pubspec.yaml  sipxconfig-rpmlintrc  sipxconfig.spec.in  subant-targets.xml  web-targets.xml
sipXconfig-audiocodes/: CONTRIBUTORS  Makefile.am  configure.ac
sipXecs/: Makefile.am  configure.ac  sipxecs-rpmlintrc  sipxecs.spec.in
sipXedgeServices/: .classpath  .project  Makefile.am  common.am  configure.ac  revision-gen  sipxedgeservices.spec.in
sipXeslLib/: Makefile.am  configure.ac  sipxesllib.spec.in
sipXexample/: .classpath  .project  Makefile.am  README  configure.ac  pubspec.yaml  sipxexample.spec.in
(+15633 files in other folders)
