AC_PREREQ(2.57)
AC_INIT(sipXaudiocodes, 4.6.0, sipx-dev@list.sipfoundry.org)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([src/org/sipfoundry/sipxconfig/phone/audiocodesphone/AudioCodesPhone.java])
m4_include([config/sipXlib2.m4])
m4_include([config/java2.m4])
AM_INIT_AUTOMAKE(foreign tar-ustar)
AC_PROG_JAVA_CC([javac])
AC_PROG_JAVA([java])
PROG_JAVA_DEP
AC_CONFIG_FILES([
  Makefile
  src/Makefile
  etc/Makefile
  test/Makefile
])
AC_OUTPUT
